added bottom margin to project facts block
Signed-off-by: Adam Zimmermann <adam@adamzimmermann.com>

--- a/sites/all/themes/tao_portfolio/portfolio-screen.css
+++ b/sites/all/themes/tao_portfolio/portfolio-screen.css
@@ -179,6 +179,9 @@ body {
     width: 455px;
     float: right;
 }
+.node-project .view-display-id-entity_view_4 {
+    margin-bottom: 150px;
+}
 
 
 /*Images*/
