fixed admin menu height
Signed-off-by: Adam Zimmermann <adam@adamzimmermann.com>

--- a/sites/all/themes/tao_portfolio/portfolio-screen.css
+++ b/sites/all/themes/tao_portfolio/portfolio-screen.css
@@ -336,6 +336,9 @@ body {
 }
 /*------------------------------------------------------------------------------------------------------*/
 
+#admin-menu-wrapper li.admin-menu-icon {
+    height: 20px;
+}
 
 
 
